fix burger-button-open and go to fix horizontal scroll on mobile

--- a/source/sass/sections/programs.scss
+++ b/source/sass/sections/programs.scss
@@ -222,7 +222,7 @@
   }
 
   .programs__text {
-    width: 100%;
+    width: 462px;
     margin-bottom: 0;
   }
 }
